WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194114
[Cocoa][EME] AirPlaying a FairPlay-protected HLS stream fails to decrypt
https://bugs.webkit.org/show_bug.cgi?id=194114
Summary
[Cocoa][EME] AirPlaying a FairPlay-protected HLS stream fails to decrypt
Jer Noble
Reported
2019-01-31 14:30:09 PST
[Cocoa][EME] AirPlaying a FairPlay-protected HLS stream fails to decrypt
Attachments
Patch
(2.34 KB, patch)
2019-01-31 14:31 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-01-31 14:31:32 PST
Created
attachment 360784
[details]
Patch
Jer Noble
Comment 2
2019-01-31 14:31:58 PST
<
rdar://problem/47392730
>
WebKit Commit Bot
Comment 3
2019-01-31 18:32:38 PST
Comment on
attachment 360784
[details]
Patch Clearing flags on attachment: 360784 Committed
r240833
: <
https://trac.webkit.org/changeset/240833
>
WebKit Commit Bot
Comment 4
2019-01-31 18:32:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug